add new changes

--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -79,60 +79,50 @@
               <img src="../IMAGES/ALU1.jpg" class="img-fluid"/>
               <h5 class="card-title py-3">Before ALU</h5>
               <p class="mt-2">
-                I was looking for scholarships because I did not hear from the
-                Indian institution I applied to due to the covid-19 pandemic
-                that started. I saw an advertisement about a school that is
-                inspiring to raise young African leaders and I started reading
-                about it because I was curious to know more. <br />
-                I took the test that I saw after reading and later received an
-                email talking about how they like my drive and passion. I felt
-                this is an institution that has been able to identify the needs
-                of an individual through a test. And so, I decided to apply to
-                study there <br />
-                It has always been my dream to help the people in my community
-                and country at large, so after reading the dreams and goal of
-                the school, I realized I have found an institution that can help
-                me achieve my dream and even give me better ideas on how to do
-                it. <br />
-                The application process was not that difficult to follow, the
-                various instructions that was given made it easier to apply.
-                <br />
-                I was so excited and happy when I got an email informing me
-                about my admission. It was like a dream come true.
+                Before joining African Leadership University, I had already obtained a National Diploma certificate in 
+                computer science at one of the state polytechnics in Nigeria. <br>
+                Because of my passion for mentoring and Bsc holders are usually considered for teaching positions, 
+                especially recent graduates in education, I decided to further my education. 
+                After I graduated from the polytechnic, I worked for more than fourteen months so I can save and continue my education. 
+                Then, I applied for a Bsc in computer science at one of the state universities in Nigeria and I was given admission. 
+                A few weeks later, I resumed and was excited to properly begin the journey of my passion despite not having enough funds to sponsor my education. <br />
+              </p>
+              <h5 class="card-title py-3">ALU Journey</h5>
+              <p>
+                It was during the first month of my resumption at the university that my guardian sent me the ALU scholarship application link. On seeing the application link, 
+                I went online to know more about the school as well as the scholarship. <br>
+                It was then I discovered the mission of ALU which is to “Transform Africa by developing its future leaders who will have a deep 
+                understanding of the challenges and opportunities on the continent”. <br>
+                <br>
+                On discovering that the mission of ALU is what I needed to pursue my passion. 
+                I quickly jumped to the available course, of which my dream course “computing” was listed. <br>
+                 At the sight of seeing this, I started the application process without delay. <br>
+                <br>
+                The application process was not complex as the instructions were easy to understand and navigate.
+                 A few weeks after submission, I was admitted into the university and before I could complete the celebration, 
+                a congratulation scholarship email was sent. It was indeed a breath of fresh.
               </p>
               <h5 class="card-title py-3">Life At ALU</h5>
               <p>
-                Because of the Covid-19 pandemic, we had to travel to Mauritius
-                in January, 2021 instead of September, 2020. It was quite a
-                fascinating situation because we had to do some few lessons
-                online from September to December, 2020 where learnt about
-                certain things of ALU and how to use learning materials provided
-                by the institution. <br />
-                I had to be in quarantine in a country i had no idea about and
-                it was suffocating especially because of the inability to go out
-                and explore the place. After the quarantine for 2 weeks, I was
-                able to meet other students and we were transported from the
-                hotel to the school. <br />
-                Seeing the school for the first time was not what i expected.
-                Because I was attending a university, which was the biggest in
-                Ghana, I was a bit disaapointed about the spaces but seeing the
-                facilities and structures was wonderful and the interactions I
-                had with various students was more welcoming than I thought.
-                <br />
-                From starting classes, the facilitators had a welcoming face and
-                encourages us by helping whenever we needed them. We had
-                leassons on Leadership Core with courses such as Data &
-                Decisions, Communicating for Impact, Enterpreneurial leadership
-                which gave me lessons on how to be a leader with empathy and
-                projects which gave me an opportunity to work on real life
-                situations with my peers. <br />
-                My advice to prospective is that they should embrace themselves
-                for self learning and also make good use of all the
-                opportunities given to them.
+                The plan and preparation to study outside the country for the first time was the greatest memory of my life. Although we(ALU newly admitted students) were supposed to resume school in September 2020, we couldn't because of covid-19 restrictions. 
+                Thus, we went there in January 2021. However, ALU organized an online course for prospective students for four months which was from September to December. <br>
+                When we finally traveled in January 2021 to Mauritius,  we were isolated for two weeks in a hotel. At the end of it, the hotel management organized a breakfast get-together for all the students that were quarantined. 
+                It was there I had the opportunity to meet and interact with other students. We went from the hotel to campus where we were welcomed warmly. <br>
+                The school organized an orientation ceremony for us for a few days and it was awesome. <br>
+                After the orientation, I resumed lectures. <br>
+                <br>
+                Also, ALU devotes its first year to what it calls the “Leadership core”. Through its courses in Data and Decisions, Projects, Entrepreneurial Leadership, and Communicating for Impact, Leadership Core" 
+                Seeks to create a high-quality learning experience for students that enables them to build real-world skills and prepare for Global Challenges." Hence, my passion was redefined after being exposed to leadership core. <br>
+                Furthermore, believing that things will turn out for the best is one of the keys to success, Stopping and losing hope can be a barrier. Hence, faith doesn’t require a reason or proof, it only requires determination. 
+                For this reason, I trusted the process of getting to ALU. Therefore, I will advise prospective students to give their best in all they do and believe that it will all end well.
               </p>
-              <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3">
-              <p class="Notes">What I can say is that it is an <span class="place">ADVENTUROUS PLACE!!</span></p>
-              <a href="#" class="btn btn-primary">Resume</a>
+              <!-- <img src="../IMAGES/ALUNIGHT.webp" alt="ALU AT NIGHT" class="img-fluid py-3"> -->
+              <!-- <a href="#" class="btn btn-outline-warning"></a> -->
+              <p>
+                Additionally, my time at ALU thus far has been amazing, as I am not only better academically but also doing great in terms of entrepreneurship.
+                 I was able to establish a hair saloon on campus that helps students to make their hair at affordable prices. 
+                I also hope to expand as I continue my academic and entrepreneurship journey.
+              </p>
             </div>
           </div>
         </div>
@@ -170,19 +160,12 @@
               <span class="card-number fw-bold">02</span>
               <h5 class="card-title py-3">Background</h5>
               <p>
-                I am a Ghanaian and I am from the Central Region of Ghana but I 
-                reside in Ashaiman, a district in the Greater Accra Region. <br>
-                I can say I'm about 1.5m tall and weigh 60kg, which was a total shock to me <br />
-                My father's name is Robert Mensah Paintsil and my mom is Mercy Mensah Paintsil.
-                I am the 3rd of their six children. I love beans with red oil and fried plantain
-                I love watching movies, singing and reading. 
-                I stay closer to a water body called the Ashaiman Dam. The community I reside in is a suburb
-                of Ashaiman called Jordan Village. Life at Jordan Village is not a bed of roses.
-                I wish to be a role model to most of the ladies and girls in my neighbourhood because of
-                how events turn out in our lives during growth. Some gets pregnant before they complete Junior High school
-                whiles others learn to trade and get married after they complete Senior High School. <br>
-                I am a past student of the Tema Methodist Day Senior High School, Ghana.  I was offering
-                Bsc Mathematical Sciences in the University of Ghana, Legon and stopped in my 2nd year to continue schooling in Mauritius.
+                I was born and raised in Edo State, Nigeria, where I developed a strong interest in learning more about the challenges that hinder the education of girls and how to mitigate them. <br>
+                This is because growing up as the first child in a family of six children was a bit tough in terms of acquiring education, especially as a girl child. <br>
+                Hence, these challenges led to the passion for building a better and healthier Africa. <br>
+                Despite being Africa's largest economy, gender equality in education has been a major in some parts, especially the rural area. 
+                Hence, education opportunities are mostly limited for girls. However, this barrier did not stop me from getting the basic education I needed to get to the top. 
+
               </p>
               <h3>Some pictures of Jordan Village</h3>
               <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
@@ -257,15 +240,14 @@
               <span class="card-number fw-bold">03</span>
               <h5 class="card-title py-3">My Country</h5>
               <p>
-                Ghana was the First Sub-Saharan Country in Africa to Gain Independence.
-                One of the fascinating historical facts about Ghana is that it achieved complete independence for the first time in Sub-Saharan Africa in 1957. 
-                Ghana was created by joining the Togoland trust with the former British Gold Coast area. <br />                
+                Nigeria is my home country and a beautiful place to be. More also, Nigeria is made up of 36 states and several ethnic groups. Within these ethnic groups are several tribes of a total of 371.  Thus, I am from Edo state, one of the most beautiful states in Nigeria. As the center and cradle of culture in Nigeria,
+                Edo state is the custodian of significant historical artifacts made of bronze, brass, timber, and terracotta. Additionally, the Edo state also known as the Edo Kingdom of Benin is one of the most well-known precolonial kingdoms on the Guinea Coast of West Africa. 
+                Hence, I speak Edo and English languages because English is the official language of Nigeria and I am an Edo by the tribe. <br>
               </p>
-              <h3>Historical Places in Ghana</h3>
-              <img src="../IMAGES/Kwame.webp" alt="Kwame Nkrumah" class="img-fluid">
+              <h3>Pictures of the Edo State</h3>
+              <img src="../IMAGES/Benin_City.jpg" alt="Benin City" class="img-fluid">
               <p class="Note mt-4">
-                On the site of a former British polo field where Ghana's independence was proclaimed in 1957, Kwame Nkrumah Memorial Park was constructed. 
-                The Mausoleum, a majestic marble monument, serves as both the final resting place for Fathia Nkrumah and the first President of Ghana.
+                City of the Benin Kingdom
               </p>
               <img src="../IMAGES/Elmina.webp" alt="Elimina Castle" class="img-fluid mt-4">
               <p class="Note mt-4">
@@ -294,31 +276,23 @@
               <span class="card-number fw-bold">05</span>
               <h5 class="card-title py-3">Life in Mauritius</h5>
               <p>
-                Mauritius, a wonderful place to be. I can say it is a lovely place to be.
-               Been a Ghanaian, I honestly do not appreciate the food of Mauritians.
-                Getting to Mauritius, during the first week in quarantine, I could not eat any of their foods
-                except junk foods like pizza, burger and wraps prepared for us. <br />
-                I would have loved to travel across Mauritius these past 1 and half years I hace been there
-                but I never got the chance to do these traveling except going to the beaches, which are beautiful 
-                places one will love to be because of the beautiful scenery and the waves. I loved to chance sit there
-                to enjoy the waves of the sea.
-                Studying in Mauritius has also given me the opportunity to do part time works which I never got the opportunity
-                to do in my home country. I was able to work 20 hours a week.
-                Although staying alone can be quite expensive, working whiles studying helped me a lot. <br>
-                My life in Mauritius has been good so far and wonderful, I had an experience of staying alone and 
-                making important decisions that affects my life. <br>
-                Not forgetting the Mauritians who made staying in their country wonderful. Although there were some bad encounters
-                with some of them, the good ones made it lovely.
-                These are some lovely places I will like to visit before I graduate African Leadership College and leave Mauritius.
-              </p>
+                Mauritius is a beautiful island country that is famous for its natural riches and great culture. However, I do not admire the taste and smell of their food because I am already used to typical Nigerian dishes so it was very difficult to cope. 
+                Because of the struggle I had with eating and studies, I reached out to the student life and wellness team. It was them that gave me the strategies to manage my academics and prepare my own meal with the available foodstuff in the country. <br>
+            </p>
               <img src="../IMAGES/Charamel.jpg" alt="Coloured earth" class="img-fluid mt-5">
               <p class="Note mt-2">Chamarel Seven Colored Earth Geopark</p>
               <img src="../IMAGES/National__Park.jpg" alt="National Park" class="img-fluid mt-4">
               <p class="Note mt-2">Black River Gorges National Park</p>
+            
+            <p>
+              It was through the management style, I discovered that I had extra time to venture into entrepreneurship. Then I used the opportunity to start my own establishment on campus, called Jossy Nation Hair Touch.
+            </p>
               <img src="../IMAGES/Flic.jpg" alt="Flic en Flac" class="img-fluid mt-4">
               <p class="Note mt-2">Flic En Flac Beach</p>
-              <img src="../IMAGES/Nature.jpg" alt="Nature Park" class="img-fluid mt-3">
-              <p class="Note mt-2">Casela Nature Parks</p>
+            <p>
+              Although I like traveling and exploring new places, I hardly ever see the time to do such because of my busy schedule. Hence, I use my free time to search for new hairstyles and update my saloon skills.
+
+            </p>
             </div>
           </div>
         </div>
