add new changes

--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -165,11 +165,10 @@
                 Hence, these challenges led to the passion for building a better and healthier Africa. <br>
                 Despite being Africa's largest economy, gender equality in education has been a major in some parts, especially the rural area. 
                 Hence, education opportunities are mostly limited for girls. However, this barrier did not stop me from getting the basic education I needed to get to the top. 
-
               </p>
-              <h3>Some pictures of Jordan Village</h3>
+              <!-- <h3>Some pictures of Jordan Village</h3>
               <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
-              <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid">
+              <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid"> -->
             </div>
           </div>
         </div>
@@ -249,23 +248,22 @@
               <p class="Note mt-4">
                 City of the Benin Kingdom
               </p>
-              <img src="../IMAGES/Elmina.webp" alt="Elimina Castle" class="img-fluid mt-4">
+              <img src="../IMAGES/leopard.webp" alt="Leopard" class="img-fluid mt-4">
               <p class="Note mt-4">
-                Elmina Castle which was built in 1482 by Portuguese conquerors is one of the best preserved forts along the Ghanaian coast. After first being a 
-                camp for weapons and resources such as gold and ivory it became a depot for slaves when the slave trade massively increased towards the end of the 17th century.
+                The Benin people of Nigeria believe that the Benin leopard is a symbol of Justice and powerful beast, which has royal qualities. 
+                The leopard reigns over the Savannah, like a king does over his subjects.
               </p>
-              <img src="../IMAGES/Kakum.jpg" alt="Kakum National Park" class="img-fluid mt-4">
+              <img src="../IMAGES/culture.webp" alt="Kakum National Park" class="img-fluid mt-4">
               <p class="Note mt-4">
-                Tucked away in the Assin Attandanso Reserve is the Kakum National Park and Canopy Walkway that offers visitors spectacular scenery and a fascinating wildlife experience 
-                along with modern camping facilities. The park’s best-known feature is undoubtedly its 7 suspension bridges which form a 333-meter long canopy walkway, suspended up to 27 meters above the forest floor from trees that are over 300 years old.
+                Newly crowned Oba of Benin Kingdom Eheneden Erediauwa (Ewuare II) is guided through a symbolic bridge by the palace chiefs during his coronation in Benin city, Nigeria in 2016.
               </p>
-              <h3 class="py-3">Indigenous Ghanaian dishes</h3>
+              <!-- <h3 class="py-3">Indigenous Ghanaian dishes</h3>
               <p class="Note mt-2">Banku with Pepper and Grilled Tilapia</p>
               <img src="../IMAGES/banku.jpg" alt="Banku" class="img-fluid">
               <p class="Note mt-4">Beans with Red Oil and Fried Plantain</p>
               <img src="../IMAGES/beans.jpg" alt="Beans" class="img-fluid">
               <p class="Note mt-4">Fufu with Light Soup and Assorted Meat</p>
-              <img src="../IMAGES/fufu.jpg" alt="Fufu" class="img-fluid">
+              <img src="../IMAGES/fufu.jpg" alt="Fufu" class="img-fluid"> -->
             </div>
           </div>
         </div>
