--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -36,7 +36,7 @@
                     <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                   </ul>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#">The Author</a></li>
+              <li class="nav-item"><a class="nav-link" href="../HTML/author.html">The Author</a></li>
             </ul>
           </div>
         </div>
