add new changes

--- a/HTML/author.html
+++ b/HTML/author.html
@@ -23,7 +23,7 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Our Storiies
+                      Our Stories
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
@@ -54,39 +54,59 @@
             <div class="carousel-inner">
               <div class="carousel-item active bg-1">
                 <div class="carousel-caption">
-                  <h5>Deborah Ama <span>Paintsil</span></h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p>
-                  <a class="bg-danger text-black" href="#">Her Story</a>
+                  <p>
+                  <span>Deborah Ama Paintsil </span>, a Ghanaian citizen and the Project Manager for our project.
+                    She is interested in website development or software engineering and has a keen interest in database development.
+                    She ensured that the project was ongoing and every team member did his or her assigned task. She also helped in assigning of tasks.
+                    Contributed in building and desiging of the website.
+                  </p>
+                  <a class="bg-danger text-white btn" href="../HTML/story1.html">Her Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-2">
                 <div class="carousel-caption">
-                  <h5>Josephine <span>Ekhator</span></h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                  <p>
+                    <span>Josephine Ekhator Nation</span>, a Nigerian citizen and a team member of our project.
+                    She is interested in website development or software engineering and has a keen interest in database development.
+                    She helped with the smooth running of our project, constantly checking in to ensure that the project was in the right direction. Built her page and assisting when needed to fix bugs.
+                  </p>
+                  <a class="bg-danger text-white btn" href="#">Her Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-3">
                 <div class="carousel-caption">
-                  <h5>Justus Wamswa <span>Chemirmir</span></h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                  <p>
+                    <span>Justus Wamswa Chemirmir</span>, a Kenyan citizen and a team member for our project.
+                    He is interested in website development or software engineering and has a keen interest in database development.
+                   He helped in the designing and building of our home page, assisted in fixing bugs. Built his own page and helped in building the website.
+                  </p>
+                  <a class="bg-danger text-white btn" href="#">His Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-4">
                 <div class="carousel-caption">
-                  <h5>Mangaliso <span>Dlamini</span></h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                  <p>
+                  <span>Mangaliso Dlamini</span>, a Kenyan citizen and a team member for our project.
+                    He is interested in website development or software engineering and has a keen interest in database development.
+                    He helped in the designing of the wireframe for the website. Gave feedbacks when necessary to beautify the website.
+                    </p>
+                  <a class="bg-danger text-white btn" href="#">His Story</a>
                 </div>
               </div>
               <div class="carousel-item bg-5">
                 <div class="carousel-caption">
-                  <h5>Kevin <span>Langat</span></h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, culpa.</p><a class="bg-warning text-white" href="#">Learn More</a>
+                <p>
+                  <span>Kevin Langat</span>, a Kenyan citizen and a team member for our project.
+                  He is interested in website development or software engineering and has a keen interest in database development.
+                 He helped in the building of our home page, built his webpage and was available for meetings throughtout the project.
+                </p>
+                <a class="bg-danger text-white btn" href="#">His Story</a>
                 </div>
               </div>
             </div><button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#carouselExampleCaptions" type="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="visually-hidden">Previous</span></button> <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#carouselExampleCaptions" type="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="visually-hidden">Next</span></button> <!--thumbnails-->
             <div class="carousel-indicators">
-              <button aria-label="Slide 1" class="active" data-bs-slide-to="0" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/DE.jpg"></button> <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/JOSSY.jpeg"></button> <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/Justus.jpg">
-                <button aria-label="Slide 4" data-bs-slide-to="3" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/Manga.jpeg"> <button aria-label="Slide 5" data-bs-slide-to="4" data-bs-target="#carouselExampleCaptions" type="button"><img class="img-fluid" src="../IMAGES/Kein.jpg">
+              <button aria-label="Slide 1" class="active" data-bs-slide-to="0" data-bs-target="#carouselExampleCaptions" type="button"></button> <button aria-label="Slide 2" data-bs-slide-to="1" data-bs-target="#carouselExampleCaptions" type="button"></button> <button aria-label="Slide 3" data-bs-slide-to="2" data-bs-target="#carouselExampleCaptions" type="button">
+                <button aria-label="Slide 4" data-bs-slide-to="3" data-bs-target="#carouselExampleCaptions" type="button"><button aria-label="Slide 5" data-bs-slide-to="4" data-bs-target="#carouselExampleCaptions" type="button">
               </button>
             </div>
           </div>
