--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -217,20 +217,15 @@
               <span class="card-number fw-bold">07</span>
               <h5 class="card-title py-3">Ideas For the Future & Careers</h5>
               <p>
-                I can sometimes be seen as a boring person because I love to be
-                by myself either watching a movie or doing some basic stuffs. So
-                far I have tried to become more sociable rather than being an
-                introvert. <br />
-                Most people tend to think I am an introvert and others too an
-                extrovert. I love spending time alone and doing things that
-                excite me the most. But I have some social life that includes
-                both personal and professional interactions. I see it as an
-                element of learning, joy, self-fulfillment and personal
-                resilience. I love working as a team with my peers groups and
-                friends because I see it as a way of learning from people. I
-                spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                people about life.
+                I have always had so many plans and ideas for the future. Growing up in an under developed community in Ashaiman and seeing how young girls in my community end up forfeiting their futures because of pregnancy, 
+                I knew I must do something for this community. It has always been sad to see girls in the same age group as mine giving heed to pressures and getting pregnant at the end. 
+                Those who made it to high school either drop out at the end or complete with poor grades which do not allow them to further their studies in the University or Polytechnic. <br />
+               <br>
+               After realising these ordeals, I decided to come up with something that can benefit both my society and other communities who are facing these issues. I came up with idea of opening an IT firm that will give all 
+               young ladies adequate skills and most current skills needed in the Technological world this century and beyond. I will also create an organization where young girls will have the opportunity to be encouraged on daily basis either through incentives,
+              books or stipends which can help to better the grades of those who are in the high school. <br>
+              <br>
+              I also decided on creating an organization which will teach and train every young person some handy work skill such as knitting of bags, clothes, beads making and other skills that can help reduce the rate of unemployment.
               </p>
               <h5 class="card-title py-3">Ideas for Future</h5>
               <p>
