add new changes

--- a/HTML/author.html
+++ b/HTML/author.html
@@ -98,7 +98,7 @@
                 <p>
                   <span>Kevin Langat</span>, a Kenyan citizen and a team member for our project.
                   He is interested in website development or software engineering and has a keen interest in database development.
-                 He helped in the building of our home page, built his webpage and was available for meetings throughtout the project.
+                 He helped in the building of our home page, built his webpage and was available for meetings throughout the project.
                 </p>
                 <a class="bg-danger text-white btn" href="#">His Story</a>
                 </div>
