--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,39 +18,44 @@
         <section class="section1">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-md">
-                    <a class="navbar-brand" href="../HTML/index.html">
-                        <h2 class="logo">IP-G2</h2>
-                    </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Our Stories
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
-                                    <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
-                                    <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
-                                </ul>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-white" href="#">The Author</a>
-                            </li>
+                  <a class="navbar-brand" href="../HTML/index.html">
+                    <h2 class="logo text-white">IP-G2</h2>
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                      <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="../HTML/index.html">Home</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                          aria-expanded="false">
+                          Our Stories
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story3.html">Justus Wamswa Chemirmir</a>
+                          </li>
+                          <li>
+                            <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
+                          </li>
+                          <li><a class="dropdown-item" href="../HTML/story5.html">Kevin Langat</a></li>
                         </ul>
-                    </div>
+                      </li>
+                      <li class="nav-item">
+                        <a href="../HTML/author.html" class="nav-link text-white">Authors</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
             </nav>
 
@@ -85,7 +90,7 @@
                                     True or not!!
                                     We realized that we can become a pillar that will define our world some day!!</p>
                                 <p class="mt-4 p-3">
-                                    <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
+                                    <a href="../HTML/author.html" class="btn btn-outline-warning stories-button">The Authors</a>
                                 </p>
                             </div>
                         </div>
@@ -115,22 +120,22 @@
                         </a>
                     </div>
                     <div class="hexagon hex2">
-                        <a href="">
+                        <a href="../HTML/story2.html">
                             <h2 class="desc">Josephine</h2>
                         </a>
                     </div>
                     <div class="hexagon hex3">
-                        <a href="">
+                        <a href="../HTML/story5.html">
                             <h2 class="desc">Kevin</h2>
                         </a>
                     </div>
                     <div class="hexagon hex4">
-                        <a href="">
+                        <a href="../HTML/story3.html">
                             <h2 class="desc">Justus</h2>
                         </a>
                     </div>
                     <div class="hexagon hex5">
-                        <a href="">
+                        <a href="../HTML/story4.html">
                             <h2 class="desc">Mangaliso</h2>
                         </a>
                     </div>
