--- a/HTML/author.html
+++ b/HTML/author.html
@@ -86,7 +86,7 @@
               <div class="carousel-item bg-4">
                 <div class="carousel-caption">
                   <p>
-                  <span>Mangaliso Dlamini</span>, a Kenyan citizen and a team member for our project.
+                  <span>Mangaliso Dlamini</span>, an Eswantini citizen and a team member for our project.
                     He is interested in website development or software engineering and has a keen interest in database development.
                     He helped in the designing of the wireframe for the website. Gave feedbacks when necessary to beautify the website.
                     </p>
