--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,7 +43,7 @@
                                   >Justus Wamswa Chemirmir</a>
                               </li>
                               <li>
-                                <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
+                                <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
                               </li>
                               <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                         </ul>
