--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" 
     crossorigin="anonymous">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
 </head>
 
@@ -32,7 +33,7 @@
                     <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
                     <li><a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a></li>
                     <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
-                    <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
+                    <li><a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a></li>
                     <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                   </ul>
               </li>
