add new changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -86,7 +86,7 @@
                         <div class="col-md-4 mt-4">
                             <div class="pt-5">
                                 <h3 class="p-3">Small Beginnings They Say</h3>
-                                <p class="p-3">It started when we saw that we can be a change maker in the world we live in.
+                                <p class="p-3 notes">It started when we saw that we can be a change maker in the world we live in.
                                     True or not!!
                                     We realized that we can become a pillar that will define our world some day!!</p>
                                 <p class="mt-4 p-3">
@@ -94,21 +94,21 @@
                                 </p>
                             </div>
                         </div>
-                        <div class="col-md-6" style="position: relative;">
+                         <div class="col-md-6 images" style="position: relative;">
                             <img src="../IMAGES/ALU1.jpg" alt="ALU" class="img-fluid picture-ALU">
-                            <img src="../IMAGES/ALU2.jpg" class="ALU images-ALU">
+                             <img src="../IMAGES/ALU2.jpg" class="ALU images-ALU">
                         </div>
-                        <div class="col-md-6">
-                         <div class="ps-5">
-                            <h3>Small Beginnings They Say</h3>
-                            <p>It started when we saw that we can be a change maker in the world we live in.
-                            True or not!!
-                            We realized that we can become a pillar that will define our world some day!!</p>
-                            <p class="mt-4">
-                                <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
-                            </p>
-                         </div>
-                        </div>
+                                <div class="col-md-6">
+                                <!-- <div class="ps-5">
+                                    <h3>Small Beginnings They Say</h3>
+                                    <p>It started when we saw that we can be a change maker in the world we live in.
+                                    True or not!!
+                                    We realized that we can become a pillar that will define our world some day!!</p>
+                                    <p class="mt-4">
+                                        <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
+                                    </p>
+                                </div> -->
+                                </div>
                     </div>
                 </div>
             </div>
