--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -59,6 +59,8 @@
     </nav>
   </header>
 
+  <div class="jumbotron">
+    <div class="container-md">
   <main class="testimonial-grid">
     <article class="testimonial">
       <span class="card-number fw-bold">01</span>
@@ -94,9 +96,19 @@
         Mauritius.
       </p>
 
-      <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid" style="width: 40%; height: 20rem;">
-      <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid" style="width: 40%; height: 20rem;"> <br><br>
-      <h6><em>Some pictures of Jordan Village</em></h6>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="../IMAGES/Dam.jpg" alt="Ashaiman-Dam" class="img-fluid">
+         </div>
+         <div class="col-md-6">
+          <img src="../IMAGES/Park.jpg" alt="Park" class="img-fluid"  style="height: 180px;">
+         </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-12">
+          <h6 class="notes"><em>Some pictures of Jordan Village</em></h6>
+        </div>
+      </div>
 
     </article>
     <article class="testimonial grid-row-2">
@@ -336,7 +348,9 @@
 
     </article>
 
-  </main>
+      </main>
+   </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
