add new changes

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -66,7 +66,6 @@
       <span class="card-number fw-bold">01</span>
       <h5 class="card-title">About Me</h5>
       <img src="../IMAGES/Deb3.jpg" class="img-fluid" />
-
       <p>
         <br><br>
         Hi, I am Deborah Ama Paintsil, a computing student of the
@@ -74,7 +73,12 @@
         I am dynamic and creative person who loves nature and passionate
         about things that makes me grow.
       </p>
+          <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+          <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
     </article>
+
     <article class="testimonial grid-col-2">
       <span class="card-number fw-bold">02</span>
       <h5 class="card-title  ">Background</h5>
@@ -118,26 +122,27 @@
         Ghana was the First Sub-Saharan Country in Africa to Gain Independence.
         One of the fascinating historical facts about Ghana is that it achieved complete independence for the first time
         in Sub-Saharan Africa in 1957.
-        Ghana was created by joining the Togoland trust with the former British Gold Coast area. <br /> <br><br>
-
+        <br>
+        <br>
+        Ghana was created by joining the Togoland trust with the former British Gold Coast area.
       </p>
-      <h5 class="card-title  ">Historical Places in Ghana</h5>
+      <h5 class="card-title mt-5">Historical Places in Ghana</h5>
       <img src="../IMAGES/Kwame.webp" alt="Kwame Nkrumah" class="img-fluid">
-      <p>
+      <p class="Note">
         On the site of a former British polo field where Ghana's independence was proclaimed in 1957, <em>Kwame Nkrumah Memorial Park</em>
          was constructed.
         The Mausoleum, a majestic marble monument, serves as both the final resting place for Fathia Nkrumah and the
         first President of Ghana.
       </p>
       <img src="../IMAGES/Elmina.webp" alt="Elimina Castle" class="img-fluid mt-4">
-      <p>
+      <p class="Note py-2">
         <em>Elmina Castle</em> which was built in 1482 by Portuguese conquerors is one of the best preserved forts along the
         Ghanaian coast. After first being a
         camp for weapons and resources such as gold and ivory it became a depot for slaves when the slave trade
         massively increased towards the end of the 17th century.
       </p>
       <img src="../IMAGES/Kakum.jpg" alt="Kakum National Park" class="img-fluid mt-4">
-      <p>
+      <p class="Note">
         Tucked away in the Assin Attandanso Reserve is the <em>Kakum National Park and Canopy Walkway</em>  that offers visitors
         spectacular scenery and a fascinating wildlife experience
         along with modern camping facilities. The park’s best-known feature is undoubtedly its 7 suspension bridges
