add new changes

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,7 +43,7 @@
                                   >Justus Wamswa Chemirmir</a>
                               </li>
                               <li>
-                                <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
+                                <a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a>
                               </li>
                               <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                         </ul>
@@ -94,7 +94,7 @@
                             </p>
                          </div>
                         </div>
-                        <div class="col-md-6">
+                        <!-- <div class="col-md-6">
                          <div class="ps-5">
                             <h3>Small Beginnings They Say</h3>
                             <p>It started when we saw that we can be a change maker in the world we live in.
@@ -104,7 +104,7 @@
                                 <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
                             </p>
                          </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
