--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -32,7 +32,7 @@
                     <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
                     <li><a class="dropdown-item" href="../HTML/story2.html">Josephine Nation Ekhator</a></li>
                     <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
-                    <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
+                    <li><a class="dropdown-item" href="../HTML/story4.html">Mangaliso Dlamini</a></li>
                     <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                   </ul>
               </li>
@@ -296,6 +296,21 @@
         </div>
       </div>
     </div>
+
+    <section class="section3">
+      <footer>
+          <div class="jumbotron footer-jumbotron">
+              <div class="container-md">
+                  <div class="row">
+                      <div class="col-md-12 pt-3">
+                          <h3>MADE WITH LOVE</h3>
+                          <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </footer>
+    </section>
   
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" 
